alignment bugs, container

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-.contactHero {
-    width:100%;
+
+#container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width:1400px;
+    text-align:center;
+}
+#contactHero {
+    width: 100%;
+    height: 300px;
+    
 }
